Extract4a/src/main/java/es/uniovi/asw/trivial/parser/y.output
   0  $accept : s $end

   1  s : preguntas

   2  preguntas : preguntas pregunta
   3            | pregunta

   4  pregunta : identificador TEXTO '{' respuestas '}'

   5  identificador : DOBLEPUNTO TEXTO DOBLEPUNTO
   6                |

   7  respuestas : respuestas respuesta
   8             | respuesta

   9  respuesta : simbolo TEXTO comentario

  10  comentario : '#' TEXTO
  11             |

  12  simbolo : '='
  13          | '~'

state 0
	$accept : . s $end  (0)
	identificador : .  (6)

	DOBLEPUNTO  shift 1
	TEXTO  reduce 6

	s  goto 2
	preguntas  goto 3
	pregunta  goto 4
	identificador  goto 5


state 1
	identificador : DOBLEPUNTO . TEXTO DOBLEPUNTO  (5)

	TEXTO  shift 6
	.  error


state 2
	$accept : s . $end  (0)

	$end  accept


state 3
	s : preguntas .  (1)
	preguntas : preguntas . pregunta  (2)
	identificador : .  (6)

	DOBLEPUNTO  shift 1
	$end  reduce 1
	TEXTO  reduce 6

	pregunta  goto 7
	identificador  goto 5


state 4
	preguntas : pregunta .  (3)

	.  reduce 3


state 5
	pregunta : identificador . TEXTO '{' respuestas '}'  (4)

	TEXTO  shift 8
	.  error


state 6
	identificador : DOBLEPUNTO TEXTO . DOBLEPUNTO  (5)

	DOBLEPUNTO  shift 9
	.  error


state 7
	preguntas : preguntas pregunta .  (2)

	.  reduce 2


state 8
	pregunta : identificador TEXTO . '{' respuestas '}'  (4)

	'{'  shift 10
	.  error


state 9
	identificador : DOBLEPUNTO TEXTO DOBLEPUNTO .  (5)

	.  reduce 5


state 10
	pregunta : identificador TEXTO '{' . respuestas '}'  (4)

	'='  shift 11
	'~'  shift 12
	.  error

	respuestas  goto 13
	respuesta  goto 14
	simbolo  goto 15


state 11
	simbolo : '=' .  (12)

	.  reduce 12


state 12
	simbolo : '~' .  (13)

	.  reduce 13


state 13
	pregunta : identificador TEXTO '{' respuestas . '}'  (4)
	respuestas : respuestas . respuesta  (7)

	'}'  shift 16
	'='  shift 11
	'~'  shift 12
	.  error

	respuesta  goto 17
	simbolo  goto 15


state 14
	respuestas : respuesta .  (8)

	.  reduce 8


state 15
	respuesta : simbolo . TEXTO comentario  (9)

	TEXTO  shift 18
	.  error


state 16
	pregunta : identificador TEXTO '{' respuestas '}' .  (4)

	.  reduce 4


state 17
	respuestas : respuestas respuesta .  (7)

	.  reduce 7


state 18
	respuesta : simbolo TEXTO . comentario  (9)
	comentario : .  (11)

	'#'  shift 19
	'}'  reduce 11
	'='  reduce 11
	'~'  reduce 11

	comentario  goto 20


state 19
	comentario : '#' . TEXTO  (10)

	TEXTO  shift 21
	.  error


state 20
	respuesta : simbolo TEXTO comentario .  (9)

	.  reduce 9


state 21
	comentario : '#' TEXTO .  (10)

	.  reduce 10


9 terminals, 9 nonterminals
14 grammar rules, 22 states
